# dash-template

./: Dockerfile  LICENSE.md  README.md  pyproject.toml
app/: app.py  requirements.txt
