[tool.poetry]
name = "dash-template"
version = "0.1.0"
description = ""
authors = ["Joe Palmo <jpalmo21@amherst.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.22.4"
pandas = "^1.4.2"
plotly = "^5.8.0"
dash = "^2.4.1"
dash-bootstrap-components = "^1.1.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
